--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link rel="shortcut icon" href="images/ags3.png">
+    <link rel="shortcut icon" href="ags3.png">
     <title>Agilisium Consulting - Login</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -25,7 +25,7 @@
                       <h1 class="font-weight-bold py-3">Login</h1>
                       <h2 class="font-weight-bold py-3">Sign in to your account</h2>
 
-                      <form action="Project.html">
+                      <form action="https://inspiring-bose-69f971.netlify.app/">
                             <div class="form-row">
                                 <div class="col-lg-7">
                                     <input type="email" placeholder="Enter a email" class="form-control my-3 p-4" required/>
@@ -38,12 +38,11 @@
                             </div>
                             <div class="form-row">
                                 <div class="col-lg-7">
-
-                                    <button type="submit"  class="btn1 mt-3 mb-5">Login</button>
+                                    <button type="submit" class="btn1 mt-3 mb-5">Login</button>
                                 </div>
                             </div>
                             <a  href="#">Forgot password?</a>
-                            <p>Don't have an account?<a href="signup.html">Register here</a></p>
+                            <p>Don't have an account?<a href="https://dreamy-banach-1db3a2.netlify.app/">Register here</a></p>
                       </form>
                   </div>
               </div>
